<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="button_elections">Upcoming elections</string>
    <string name="button_representatives">Find my representatives</string>
    <string name="button_use_location">Use my location</string>
    <string name="location_permission_denied">Location permission not granted</string>
    <string name="device_location_not_available">Device location not available</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="button_follow_election">Follow Election</string>
    <string name="button_unfollow_election">Unfollow Election</string>
    <string name="text_ballot_info">Ballot Information</string>
    <string name="text_voting_locations">Voting Locations</string>
    <string name="text_election_info">Election Information</string>
    <string name="text_reps_search">Representative Search</string>
    <string name="text_my_reps">My Representatives</string>
    <string name="hint_address_line_1">Address Line 1</string>
    <string name="hint_address_line_2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="hint_zip">Zip</string>
    <string name="error_loading_reps">There was a problem loading representatives</string>
    <string name="error_address">Please check address</string>
</resources>
